[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
cgmath = "0.18.0"
sdl2 = { version = "0.37.0", default-features = false, features = [
  "image",
  "unsafe_textures",
] }
thiserror = "2.0.5"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }
