[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }
cgmath = "0.18.0"
image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
approx = "0.5.1"
env_logger = "0.10"
log = "0.4"
chrono = "0.4.39"
thiserror = "2.0.5"
